--- a/style.css
+++ b/style.css
@@ -25,8 +25,17 @@ body{
 }
 
 .buttons {
+    display: flex;
+    flex-direction: column;
     width: 400px;
     height: 400px;
+    align-items: flex-start;
+}
+
+.rb,
+.sd,
+.er {
+    display: flex;
 }
 
 .slide {
